# blackcat-usb-verify

./: .gitignore  concept.md  roadmap.md
flashverify/: README.md  bundle_dlls.sh  meson.build  pack_dist.sh
flashverify/python/: generate_report.py
flashverify/src/: debug_drives.c  device.c  device.h  flashverify.manifest  flashverify.rc  hash.c  hash.h  main.c  random.c  random.h  rawio.c  rawio.h  report.c  report.h  test.c  test.h  ui.c  ui.h
